Adding the pytests file and troubleshooting

--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,9 @@ name = "pypi"
 pytest = "*"
 build = "*"
 twine = "*"
+ccrypt = {editable = true, path = "."}
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3"
