--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ description = "A caesar crypt package"
 authors = [
     {name = "Adam Schwartz", email = "ags613@nyu.edu"},
     {name = "Isaac Kwon", email = "iok206@nyu.edu"}
+    {name = "Alexander Kondratiuk", email = "ak8000@nyu.edu"}
 ]
 dynamic = ["version"]
 
