--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "A caesar crypt package"
 authors = [
     {name = "Adam Schwartz", email = "ags613@nyu.edu"},
-    {name = "Isaac Kwon", email = "iok206@nyu.edu"}
+    {name = "Isaac Kwon", email = "iok206@nyu.edu"},
     {name = "Alexander Kondratiuk", email = "ak8000@nyu.edu"}
 ]
 dynamic = ["version"]
