--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,27 @@ description = "A caesar crypt package"
 authors = [
     {name = "Adam Schwartz", email = "ags613@nyu.edu"},
     {name = "Isaac Kwon", email = "iok206@nyu.edu"},
-    {name = "Alexander Kondratiuk", email = "ak8000@nyu.edu"}
+    {name = "Alexander Kondratiuk", email = "ak8000@nyu.edu"},
+    {name = "Janet Pan", email = "jp6024@nyu.edu"}
 ]
 dynamic = ["version"]
 
+readme = "README.md"
+keywords = ["python", "package", "build", "tutorial"]
+requires-python = ">=3"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Operating System :: OS Independent",
+]
+
+[project.optional-dependencies]
+dev = ["pytest"]
+
+[project.urls]
+"Homepage" = "https://github.com/software-students-spring2024/3-python-package-exercise-ja-ia"
+"Repository" = "https://github.com/software-students-spring2024/3-python-package-exercise-ja-ia.git"
+"Bug Tracker" = "https://github.com/software-students-spring2024/3-python-package-exercise-ja-ia/issues"
+
+[project.scripts]
+examplepackagefb1258 = "ccrypt.__main__:main"
