--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "ccrypt"
+name = "cccrypt"
 version = "0.1.2"
 description = "A caesar crypt package"
 authors = [
